# LLMtop

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  dist-workspace.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: demo.tape
assets/themes/: btop.tape  catppuccin.tape  deuteranopia.tape  dracula.tape  gruvbox.tape  high-contrast.tape  light.tape  nord.tape  protanopia.tape  tokyo-night.tape  tritanopia.tape  white.tape
scripts/: abtop-statusline.sh  llmtop-statusline.sh
src/: app.rs  config.rs  demo.rs  gpu.rs  lib.rs  locale.rs  main.rs  setup.rs  snapshot.rs
src/collector/: auto_discover.rs  llama_cpp.rs  mcp.rs  mod.rs  odysseus.rs  ollama.rs  opencode.rs  process.rs  rate_limit.rs  vllm.rs
src/model/: session.rs
src/ui/: config.rs  context.rs  gpu.rs  header.rs  help.rs  mcp.rs  mod.rs  ports.rs  projects.rs  quota.rs  tokens.rs  view_menu.rs
src/ui/sessions/: detail.rs  file_audit.rs  mod.rs  timeline.rs
