[package]
name = "llmtop"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
description = "htop for local LLMs — universal TUI dashboard for monitoring Ollama, llama.cpp, vLLM, and any OpenAI-compatible inference server"
license = "GPL-3.0"
repository = "https://github.com/weby-homelab/LLMtop"
homepage = "https://github.com/weby-homelab/LLMtop"
keywords = ["tui", "monitor", "llm", "ollama", "localllm"]
categories = ["command-line-utilities"]
readme = "README.md"
authors = ["weby-homelab <rekvizitor.ua@gmail.com>"]
[[bin]]
name = "llmtop"
path = "src/main.rs"

[lib]
name = "llmtop"
path = "src/lib.rs"

[features]
default = []
nvidia = ["nvml-wrapper"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"
nvml-wrapper = { version = "0.10", optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
proc_pidinfo = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
sysinfo = "0.32"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
